RESOLVED FIXED306751
I420 BT709 VideoFrame is encoded in incorrect color space to VP9
https://bugs.webkit.org/show_bug.cgi?id=306751
Summary I420 BT709 VideoFrame is encoded in incorrect color space to VP9
Kimmo Kinnunen
Reported 2026-02-02 00:39:36 PST
I420 BT709 VideoFrame is encoded in incorrect color space to VP9 http/wpt/webcodecs/encoder-decoder-vp9-I420.html imported/w3c/web-platform-tests/webcodecs/videoFrame-createImageBitmap.https.any.html imported/w3c/web-platform-tests/webcodecs/videoFrame-createImageBitmap.https.any.worker.html
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-02 00:39:42 PST
youenn fablet
Comment 2 2026-02-12 02:39:01 PST
EWS
Comment 3 2026-03-31 07:14:24 PDT
Committed 310306@main (aff9959e02c3): <https://commits.webkit.org/310306@main> Reviewed commits have been landed. Closing PR #58499 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.