I420 BT709 VideoFrame is encoded in incorrect color space to VP9 rdar://169425608 https://bugs.webkit.org/show_bug.cgi?id=306751

Reviewed by Kimmo Kinnunen.

We make sure that libwebrtc vp9 encoder gets color space information from the video frames.
We update webrtc::LibvpxVp9Encoder to check frame color space and update the libvpx option according accordingly.
This ensures that the generated config contains as accurate information as possible.
Everytime the color space changes, we generate a new key frame which will allow to generate the config in the vp9 stream.

We special case color space for RGB video frames in LibWebRTCVPXInternalVideoEncoder since we use libyuv to convert the frames to NV12.

At the webcodecs level, we make sure to call the description callback everytime the color space changes.
This allows to surface the decoder config with the explicit color space.

We add support for WebCore color space to webrtc color space conversion.
As a fly-by fix, we update the webrtc color space to WebCore color space conversion routines.

We update encoder-decoder-vp9-I420.html to cover both software and hardware decoders for extra coverage.
We also make sure that the created video frame has the expected color space so that it gets propagated to the encoder.

Covered by test no longer failing.

imported/w3c/web-platform-tests/webcodecs/videoFrame-createImageBitmap.https.any.html is still failing in iOS simulator.
A follow-up should fix that test on simulator. For now, we mark the test as failing in iOS.

* LayoutTests/TestExpectations:
* LayoutTests/http/wpt/webcodecs/encoder-decoder-vp9-I420-expected.txt:
* LayoutTests/http/wpt/webcodecs/encoder-decoder-vp9-I420.html:
* LayoutTests/http/wpt/webcodecs/resources/videoframe-utilities.js:
(async encodeDecodeVideoFrame):
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/ThirdParty/libwebrtc/Configurations/libwebrtc.exp:
* Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_coding/codecs/vp9/libvpx_vp9_encoder.cc:
* Source/ThirdParty/libwebrtc/Source/webrtc/modules/video_coding/codecs/vp9/libvpx_vp9_encoder.h:
* Source/WebCore/platform/cocoa/VideoToolboxSoftLink.cpp:
* Source/WebCore/platform/cocoa/VideoToolboxSoftLink.h:
* Source/WebCore/platform/graphics/PlatformVideoColorSpace.h:
(WebCore::PlatformVideoColorSpace::operator bool const):
* Source/WebCore/platform/graphics/cv/ImageTransferSessionVT.h:
* Source/WebCore/platform/graphics/cv/ImageTransferSessionVT.mm:
(WebCore::ImageTransferSessionVT::convertPixelBuffer):
* Source/WebCore/platform/libwebrtc/LibWebRTCVPXVideoEncoder.cpp:
(WebCore::LibWebRTCVPXInternalVideoEncoder::create):
(WebCore::LibWebRTCVPXVideoEncoder::create):
(WebCore::LibWebRTCVPXVideoEncoder::LibWebRTCVPXVideoEncoder):
(WebCore::LibWebRTCVPXInternalVideoEncoder::LibWebRTCVPXInternalVideoEncoder):
(WebCore::LibWebRTCVPXInternalVideoEncoder::encode):
(WebCore::LibWebRTCVPXInternalVideoEncoder::OnEncodedImage):
* Source/WebCore/platform/libwebrtc/LibWebRTCVPXVideoEncoder.h:
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCVideoFrameUtilities.h:
(WebCore::toWebRTCColorSpace):
(WebCore::colorSpaceFromLibWebRTCVideoFrame):

Canonical link: https://commits.webkit.org/310306@main